Linked CSS to index.html

--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width" />
         <title>Spencer Davis Portfolio</title>
         <link rel="shortcut icon" type="img/jpg" href="images/coding_icon.png">
-        <link rel="stylesheet" type="text/css" href="stylesheet/sample_portfolio.css">
+        <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
     </head>
 
     <!-- Body -->
@@ -157,7 +157,7 @@
         
         <!-- Footer section -->
         <footer>
-                <p class="center"> Spencer Davis Portfolio Website 2023 </p><br>
+                <p class="center"> Spencer Davis Portfolio Website || 2023 </p><br>
         </footer>
         <script src="./JS/portfolio.js"></script>
     </body>
