--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -68,7 +68,7 @@
                     </div>
                     <!-- Slide 4 of 6 -->
                     <div class="mySlides fade">
-                        <img class="Slideshow_Images" src="./images/c#.png" alt="C# logo">
+                        <img class="Slideshow_Images" src="./images/Csharp_Logo.png" alt="C# logo">
                         <div class="text">C#, .NET Framework, ASP.NET, MVC, </div>
                     </div>
                     <!-- Slide 5 of 6 -->
